--- a/index.html
+++ b/index.html
@@ -7,9 +7,26 @@
     <title>Milestone-1</title>
 
     <link rel="stylesheet" href="style.css">
+
+    <!-- google font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
 </head>
 <body>
+    <section>
+        <div class="half-width">
+            <h1>Welcome To <br><span class="orange-color">Peter Parker World!</span></h1>
+            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ipsum praesentium facere voluptatum sapiente nisi tempore amet quis vel ut dolores voluptas minus in illum mollitia recusandae exercitationem, cum ex.</p>
+
+                <a href="" class="link-button">Hire Me</a>
+        </div>
     
+        <div class="half-width">
+            <img src="/Milestone-1/images/jhankar.png" alt="Jhankar personal image">
+        </div>
+    </section>
 
 </body>
 </html>
