top banner added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To <br><span class="orange-color">Peter Parker World!</span></h1>
             <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ipsum praesentium facere voluptatum sapiente nisi tempore amet quis vel ut dolores voluptas minus in illum mollitia recusandae exercitationem, cum ex.</p>
