--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To <br><span class="orange-color">Peter Parker World!</span></h1>
-            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ipsum praesentium facere voluptatum sapiente nisi tempore amet quis vel ut dolores voluptas minus in illum mollitia recusandae exercitationem, cum ex.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ipsum praesentium facere voluptatum sapiente nisi tempore amet quis vel ut dolores voluptas minus in illum mollitia recusandae exercitationem, cum ex.</p>
 
                 <a href="" class="link-button">Hire Me</a>
         </div>
@@ -26,6 +26,22 @@
         <div class="half-width">
             <img src="/Milestone-1/images/jhankar.png" alt="Jhankar personal image">
         </div>
+    </section>
+
+
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="/Milestone-1/images/jhankar2.png" alt="Jhankar 2 personal image">
+        </div>
+    
+        <div class="half-width">
+            <h1>Dream Big</h1>
+             <h2>Become a web developer</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ipsum praesentium facere voluptatum sapiente nisi tempore amet quis vel ut dolores voluptas minus in illum mollitia recusandae exercitationem, cum ex.</p>
+
+                <a href="" class="link-button">Download</a>
+        </div>
+        
     </section>
 
 </body>
