bottom side added

--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
 
 </head>
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To <br><span class="orange-color">Peter Parker World!</span></h1>
+            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ipsum praesentium facere voluptatum sapiente nisi tempore amet quis vel ut dolores voluptas minus in illum mollitia recusandae exercitationem, cum ex.</p>
 
-                <a href="" class="link-button">Hire Me</a>
+            <a href="https://www.linkedin.com/in/raakibul/" target="_blank" class="link-button">Hire Me</a>
         </div>
     
         <div class="half-width">
@@ -29,7 +30,7 @@
     </section>
 
 
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="/Milestone-1/images/jhankar2.png" alt="Jhankar 2 personal image">
         </div>
@@ -39,10 +40,27 @@
              <h2>Become a web developer</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ipsum praesentium facere voluptatum sapiente nisi tempore amet quis vel ut dolores voluptas minus in illum mollitia recusandae exercitationem, cum ex.</p>
 
-                <a href="" class="link-button">Download</a>
+                <a href="https://www.linkedin.com/in/raakibul/" target="_blank" class="link-button">Download</a>
         </div>
         
     </section>
+
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div class="half-width">
+                <h1>Full Stack Developer</h1>
+                <h3>2022-Present | Pro level developer</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa inventore ducimus quaerat optio cupiditate voluptates.</p>
+            </div>
+            <div class="half-width">
+                <h1>Junior Web Developer</h1>
+                <h3>2022-Present | Pro Learner</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum ex dolores suscipit rem, adipisci porro.</p>
+            </div>
+        </div>
+    </section>
+
 
 </body>
 </html>
