--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To <br><span class="orange-color">Peter Parker World!</span></h1>
-            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+            <h3 class="orange-color">Lorem ipsum dolor sit amet consectetur.</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ipsum praesentium facere voluptatum sapiente nisi tempore amet quis vel ut dolores voluptas minus in illum mollitia recusandae exercitationem, cum ex.</p>
 
             <a href="https://www.linkedin.com/in/raakibul/" target="_blank" class="link-button">Hire Me</a>
@@ -37,7 +37,7 @@
     
         <div class="half-width">
             <h1>Dream Big</h1>
-             <h2>Become a web developer</h2>
+             <h2 class="orange-color">Become a web developer</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ipsum praesentium facere voluptatum sapiente nisi tempore amet quis vel ut dolores voluptas minus in illum mollitia recusandae exercitationem, cum ex.</p>
 
                 <a href="https://www.linkedin.com/in/raakibul/" target="_blank" class="link-button">Download</a>
@@ -48,14 +48,14 @@
     <section class="experience-area">
         <h1>Experiences</h1>
         <div class="flexible-container">
-            <div class="half-width">
-                <h1>Full Stack Developer</h1>
-                <h3>2022-Present | Pro level developer</h3>
+            <div id="full-web-dev-exp" class="experience-item">
+                <h2>Full Stack Developer</h2>
+                <h3 class="orange-color">2022-Present | Pro level developer</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa inventore ducimus quaerat optio cupiditate voluptates.</p>
             </div>
-            <div class="half-width">
-                <h1>Junior Web Developer</h1>
-                <h3>2022-Present | Pro Learner</h3>
+            <div id="web-dev-exp" class="experience-item">
+                <h2>Junior Web Developer</h2>
+                <h3 class="orange-color">2022-Present | Pro Learner</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum ex dolores suscipit rem, adipisci porro.</p>
             </div>
         </div>
