--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 </head>
 <body>
-    <section class="top-banner flexible-container">
+    <section class="flexible-container">
         <div class="half-width">
             <h1>Welcome To <br><span class="orange-color">Peter Parker World!</span></h1>
             <h3 class="orange-color">Lorem ipsum dolor sit amet consectetur.</h3>
