some code added

--- a/Module-2/index.html
+++ b/Module-2/index.html
@@ -8,8 +8,14 @@
 </head>
 <body>
 
-<h1>I am exploring css</h1>
-<p>Name: Rahmat Ali</p>
+    <h1>I am exploring CSS </h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, obcaecati exercitationem? Fugit dolores, sint eligendi expedita nihil assumenda sit laboriosam?</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, id!</p>
+    <p>Lorem ipsum dolor sit.</p>
+    <p>Lorem, ipsum dolor.</p>
+    
+
     
 </body>
 </html>
