--- a/Module-2/index.html
+++ b/Module-2/index.html
@@ -12,7 +12,7 @@
 
     <h3 id="second-header">Lorem ipsum dolor, sit amet consectetur adipisicing.</h3>
     <h3 class="third-header">Lorem ipsum dolor sit amet consectetur.</h3>
-    <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem.</h3>
+    <h3 class="third-header">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem.</h3>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, obcaecati exercitationem? Fugit dolores, sint eligendi expedita nihil assumenda sit laboriosam?</p>
 
