block, inline, inline-block code will be added

--- a/Module-2/blog.html
+++ b/Module-2/blog.html
@@ -10,21 +10,21 @@
 <body>
     <h1>Welcome to my blog</h1>
     <div class="blog">
-        <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+        <h3 class="blog-title">Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
     <small>Author: <span class="author-name">Lorem ipsum dolor.</span></small>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate animi dolorem nihil exercitationem omnis voluptate voluptatum quis amet doloribus impedit nobis ipsam saepe aspernatur a, recusandae cumque quam quos laborum.Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate animi dolorem nihil exercitationem omnis voluptate voluptatum quis amet doloribus impedit nobis ipsam saepe aspernatur a, recusandae cumque quam quos laborum.</p>
     </div>
 
     <div class="blog">
-    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+    <h3 class="blog-title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
     <small>Author: <span class="author-name">Lorem ipsum dolor.</span></small>
 
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex nihil debitis impedit consequatur earum ea, fuga fugit voluptates corporis laboriosam laborum nobis molestias aperiam deleniti quas dicta architecto. Corporis assumenda enim nobis velit saepe explicabo. Excepturi nostrum obcaecati quae quidem.</p>
     </div>
 
     <div class="blog">
-        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+        <h3 class="blog-title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
         <small>Author: <span class="author-name">Lorem ipsum dolor.</span></small>
 
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex nihil debitis impedit consequatur earum ea, fuga fugit voluptates corporis laboriosam laborum nobis molestias aperiam deleniti quas dicta architecto. Corporis assumenda enim nobis velit saepe explicabo. Excepturi nostrum obcaecati quae quidem.</p>
