--- a/Module-4/index.html
+++ b/Module-4/index.html
@@ -8,7 +8,7 @@
         table{
             border-collapse: collapse;
         }
-        td{
+        td,th{
             border:1px solid black;
             padding: 5px 10px;
         }
@@ -18,6 +18,12 @@
     <h1>HTML Table</h1>
     <table>
         <thead>
+            <tr>
+                <td>No.</td>
+                <td>name</td>
+                <td>Company</td>
+                <td>Salary</td>
+            </tr>
 
         </thead>
 
@@ -55,6 +61,6 @@
 
         </tfoot>
     </table>
-    
+
 </body>
 </html>
